--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,20 @@ lilás: #5f2c82
 */
 
 *{
-    margin: 0%;
-    padding: 0%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color:  #5f2c82;
+    width: 100vw;
+    height: 100vh;
+    
+}
+
+main{
+    height: 100vh;
+    width: 100vw;
 }
