--- a/estilos/style.css
+++ b/estilos/style.css
@@ -21,6 +21,32 @@ body, html{
 }
 
 main{
+    position: relative;
     height: 100vh;
     width: 100vw;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: #5f2c82 url(../imagens/pre.jpg) no-repeat;
+    background-size: cover;
+    height: 200px;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
 }
