--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -3,13 +3,14 @@
 
 
 @media screen and (min-width: 768px ) and (max-width: 992px) {
-
+/*Configuração para Tablet*/
     body{
         background-image: linear-gradient( to top, #49a09d, #5f2c82);
     }
 
     section#login{
         width: 80vw;
+        height: 280px;
     }
     section#login > div#imagem {
         float: left;
@@ -25,13 +26,14 @@
 }
 
 @media screen and (min-width: 992px) {
-
+/*Configuração de PC*/
     body{
         background-image: linear-gradient( to top, #49a09d, #5f2c82);
     }
     
     section#login {
         width: 950px;
+        height: 350px;
     }
 
     section#login > div#imagem{
@@ -49,6 +51,7 @@
     }
 
     div#formulario > p{
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
 }
