--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,16 +30,16 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
-
+    transform: translate(-50%, -50%);
     transition: width 0.5s, height 0.5s;
     transition-timing-function: ease;
+
 }
 
 section#login > div#imagem{
@@ -65,6 +65,7 @@ div#formulario > p{
 
 form > div.campo{
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     width: 100%;
     display: block;
     height: 40px;
@@ -89,9 +90,14 @@ div.campo > input{
     width: calc(100% - 45px);
     height: 100%;
     border: 0px;
-    transform: translateY(-10px);
     border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
     
+}
+
+div.campo > input:focus-within{
+    background-color: white;
 }
 
 form > input[type=submit]{
